--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "papaparse": "^5.5.2",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   }
 }
